Update my files

--- a/index.html
+++ b/index.html
@@ -8,45 +8,53 @@
   <link rel="stylesheet" href="screen.css" />
 </head>
 <body>
-  <h1>Qi Zhang</h1>
-  <p>
-    Hi, my name is Qi. I'm a graduate student majored in Information Architecture
-    right now. And I choose Front-end Developer as my career goal.
-  </p>
-  <p>
-    I studied Advertising during my undergraduate period. Although I was not an
-    engineering or science student, my interdisciplinary background helps me a lot.
-    For instance, my undergraduate major helped me to develop a sense of choosing
-    attractive things, which pushed me to keep high standards for my own web design.
-  </p>
-  <!-- TODO:picture here-->
-  <p>
-    I have two important turning points for my career goal. The first one happened
-    in my third year in university. My friend asked me whether I was interested to
-    join a mobile app development team, and I could do UE and Product Management
-    work. I feel lucky right now since I choose to accept the invitation at that
-    moment which helped me to get in touch with those web/software things. So with
-    the experience in that team, I became a real product manager after I graduated
-    and my first work lasted one year.
-  </p>
-  <p>
-    The one-year product manager work was not that cheerful. My boss pushed me a lot
-    and I always stayed up late without extra pay. And my PM team had a bad
-    relationship with developer team which made me disappointed. I thought to study
-    aboard and learning what I didn't know is a challenge/opportunity. So I made my
-    mind from the end of 2015.
-  </p>
-  <p>
-    Around this time last year, I didn't have a very clear career goal. But one day,
-    I browsed my friend's own website and he showed me lots of tricks. I suddenly
-    these found attractive things were so interesting. And combining with the
-    current market, I thought why not to be a web designer. So I chose to register
-    web design relative classes and self-studied.
-  </p>
-  <p>
-    This summer break, I had an internship in a local start up working as front-end
-    designer. Every time I finished the assignments, I felt very satisfied. This
-    experience really made me affirm my choice for sure.
-  </p>
+  <header class="header">
+    <h1 class="name">QI ZHANG</h1>
+  </header>
+
+  <div class="contents">
+    <h1 class="content_title">Self Introduction</h1>
+    <img class="my_pic" src="my_pic.png"></img>
+    <p>
+      Hi, my name is Qi. I'm a graduate student majored in Information Architecture
+      right now. And I choose Front-end Developer as my career goal.
+    </p>
+    <p>
+      I studied Advertising during my undergraduate period. Although I was not an
+      engineer or science student, my interdisciplinary background still helps me a lot.
+      For instance, my undergraduate major experience helped me to develop a sense of choosing
+      attractive things, which pushed me to keep high standards for my own web design.
+    </p>
+    <!-- TODO:picture here-->
+    <p>
+      I have two important turning points for my career goal. The first one happened
+      in my third year in university. My friend asked me whether I was interested to
+      join a mobile app development team, and I could do UE and Product Management
+      work. I feel lucky right now since I choose to accept the invitation at that
+      moment which helped me to get in touch with those web/software things. So with
+      the experience in that team, I became a real product manager after I graduated
+      and my first work lasted one year.
+    </p>
+    <p>
+      The one-year product manager work was not that cheerful. My boss pushed me a lot
+      and I always stayed up late without extra pay. And my PM team had a bad
+      relationship with developer team which made me disappointed. I thought to study
+      aboard and learning what I didn't know is a challenge/opportunity. So I made my
+      mind from the end of 2015.
+    </p>
+    <p>
+      Around this time last year, I didn't have a very clear career goal. But one day,
+      I browsed my friend's own website and he showed me lots of tricks. I suddenly
+      these found attractive things were so interesting. And combining with the
+      current market, I thought why not to be a web designer. So I chose to register
+      web design relative classes and self-studied.
+    </p>
+    <p>
+      This summer break, I had an internship in a local start up working as front-end
+      designer. Every time I finished the assignments, I felt very satisfied. This
+      experience really made me affirm my choice for sure.
+    </p>
+  </div>
+  
 </body>
 </html>
