Use  <h1> only once; Use <article> to substitute <div>; Use <h2> as a subtitle in article

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1 class="name">QI ZHANG</h1>
   </header>
 
-  <div class="contents">
-    <h1 class="content_title">Self Introduction</h1>
-    <img class="my_pic" src="my_pic.png"></img>
+  <article class="contents">
+    <h2 class="content_title">Self Introduction</h2>
+    <img class="my_pic" src="my_pic.png" alt="this is my pic.">    
     <p>
       Hi, my name is Qi. I'm a graduate student majored in Information Architecture
       right now. And I choose Front-end Developer as my career goal.
@@ -54,7 +54,8 @@
       designer. Every time I finished the assignments, I felt very satisfied. This
       experience really made me affirm my choice for sure.
     </p>
-  </div>
+  </article>
   
 </body>
+
 </html>
