--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,
     initial-scale=1.0, shrink-to-fit=no" />
   <link rel="stylesheet" href="screen.css" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -14,14 +15,13 @@
 
   <article class="contents">
     <h2 class="content_title">Self Introduction</h2>
-    <img class="my_pic" src="my_pic.png" alt="this is my pic.">    
+    <img class="my_pic" src="images/my_pic.png" alt="this is my pic.">    
     <p>
-      Hi, my name is Qi. I'm a graduate student majored in Information Architecture
-      right now. And I choose Front-end Developer as my career goal.
+      Hi, my name is Qi Zhang. I'm a currently a  graduate student majored in Information Architecture. And I hope to be a web designer after I graduate.
     </p>
     <p>
       I studied Advertising during my undergraduate period. Although I was not an
-      engineer or science student, my interdisciplinary background still helps me a lot.
+      engineer or science background student, my interdisciplinary background still helps me a lot.
       For instance, my undergraduate major experience helped me to develop a sense of choosing
       attractive things, which pushed me to keep high standards for my own web design.
     </p>
@@ -50,11 +50,19 @@
       web design relative classes and self-studied.
     </p>
     <p>
-      This summer break, I had an internship in a local start up working as front-end
+      This summer break, I had an internship in a local start up(<a href="https://www.fire-extinguisher.net/">Pyroweb.net</a>) working as front-end
       designer. Every time I finished the assignments, I felt very satisfied. This
       experience really made me affirm my choice for sure.
     </p>
   </article>
+  <footer>
+    <p>Contact Me Via</p>
+    <ul>
+      <li><a href="https://github.com/QiZhang79"><img src="images/github_icon.png" id="github_icon" alt="this is github icon."></a></li>
+      <li><a href="https://www.facebook.com/zhangqitydx"><img src="images/facebook.png" id="facebook_icon" alt="this is facebook icon."></a></li>
+    </ul>
+      
+  </footer>
   
 </body>
 
