--- a/index.html
+++ b/index.html
@@ -9,60 +9,72 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
+<div id="page">
+  <header id="header">
     <h1 class="name">QI ZHANG</h1>
   </header>
 
-  <article class="contents">
+  <article id="primary">
     <h2 class="content_title">Self Introduction</h2>
-    <img class="my_pic" src="images/my_pic.png" alt="this is my pic.">    
+    <figure>
+      <img class="my_pic" src="images/my_pic.png" alt="this is my pic."> 
+      <figcaption></figcaption>         
+    </figure>
     <p>
-      Hi, my name is Qi Zhang. I'm a currently a  graduate student majored in Information Architecture. And I hope to be a web designer after I graduate.
+      Hi, my name is Qi Zhang. I'm a currently a  graduate student majored in 
+      Information Architecture. And I hope to be a web designer after I graduate.
     </p>
     <p>
-      I studied Advertising during my undergraduate period. Although I was not an
-      engineer or science background student, my interdisciplinary background still helps me a lot.
-      For instance, my undergraduate major experience helped me to develop a sense of choosing
-      attractive things, which pushed me to keep high standards for my own web design.
+      I studied Advertising during my undergraduate period. Although I was not 
+      an engineer or science background student, my interdisciplinary background 
+      still helps me a lot.
+      For instance, my undergraduate major experience helped me to develop a 
+      sense of choosing attractive things, which pushed me to keep high 
+      standards for my own web design.
     </p>
     <!-- TODO:picture here-->
     <p>
-      I have two important turning points for my career goal. The first one happened
-      in my third year in university. My friend asked me whether I was interested to
-      join a mobile app development team, and I could do UE and Product Management
-      work. I feel lucky right now since I choose to accept the invitation at that
-      moment which helped me to get in touch with those web/software things. So with
-      the experience in that team, I became a real product manager after I graduated
-      and my first work lasted one year.
+      I have two important turning points for my career goal. The first one 
+      happened in my third year in university. My friend asked me whether I was 
+      interested to join a mobile app development team, and I could do UE and 
+      Product Management work. I feel lucky right now since I choose to accept 
+      the invitation at that moment which helped me to get in touch with those 
+      web/software things. So with the experience in that team, I became a real 
+      product manager after I graduated and my first work lasted one year.
     </p>
     <p>
-      The one-year product manager work was not that cheerful. My boss pushed me a lot
-      and I always stayed up late without extra pay. And my PM team had a bad
-      relationship with developer team which made me disappointed. I thought to study
-      aboard and learning what I didn't know is a challenge/opportunity. So I made my
-      mind from the end of 2015.
+      The one-year product manager work was not that cheerful. My boss pushed me
+       a lot and I always stayed up late without extra pay. And my PM team had a
+      bad relationship with developer team which made me disappointed. I thought
+       to study aboard and learning what I didn't know is a challenge/opportunity.
+      So I made my mind from the end of 2015.
     </p>
     <p>
-      Around this time last year, I didn't have a very clear career goal. But one day,
-      I browsed my friend's own website and he showed me lots of tricks. I suddenly
-      these found attractive things were so interesting. And combining with the
-      current market, I thought why not to be a web designer. So I chose to register
-      web design relative classes and self-studied.
+      Around this time last year, I didn't have a very clear career goal. But one
+       day, I browsed my friend's own website and he showed me lots of tricks. I 
+       suddenly these found attractive things were so interesting. And combining 
+       with the current market, I thought why not to be a web designer. So I 
+       chose to register web design relative classes and self-studied.
     </p>
     <p>
       This summer break, I had an internship in a local start up(<a href="https://www.fire-extinguisher.net/">Pyroweb.net</a>) working as front-end
-      designer. Every time I finished the assignments, I felt very satisfied. This
-      experience really made me affirm my choice for sure.
+      designer. Every time I finished the assignments, I felt very satisfied. 
+      This experience really made me affirm my choice for sure.
     </p>
   </article>
-  <footer>
+  <footer id="footer">
     <p>Contact Me Via</p>
     <ul>
-      <li><a href="https://github.com/QiZhang79"><img src="images/github_icon.png" id="github_icon" alt="this is github icon."></a></li>
-      <li><a href="https://www.facebook.com/zhangqitydx"><img src="images/facebook.png" id="facebook_icon" alt="this is facebook icon."></a></li>
+      <li><a href="https://github.com/QiZhang79"><img src="images/github_icon.png"
+       id="github_icon" alt="this is github icon."></a></li>
+      <li><a href="https://www.facebook.com/zhangqitydx"><img src="images/facebook.png" 
+        id="facebook_icon" alt="this is facebook icon."></a></li>
     </ul>
+    <small>Copyright &copy; Qi Zhang</small>
       
   </footer>
+</div>
+  
   
 </body>
 
